--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseDocument.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseDocument.cshtml
@@ -6,7 +6,7 @@
             <table class="table table-striped table-full-width">
                 <thead>
                     <tr>
-                        <th class="span4">Name</th>
+                        <th class="span4">@Translation.GetCoreTextTranslation("Namn")</th>
                         <th class="span4"></th>
                         <th class="span4"></th>
                     </tr>
@@ -18,10 +18,7 @@
                         @item.Name<text>.</text>@item.FileType
                     </td>
                     <td>
-                        @*ska hämta baserat på caseGuid?*@
-                        @*<a href="/casedocument/CaseDocumentGet?caseDocumentGUID=@item.CaseDocumentGUID" target="_blank" title="@Translation.GetCoreTextTranslation("Skriv ut") @item.Name" class="btn print-case"><i class="icon-file"></i> @Translation.GetCoreTextTranslation("Skriv ut")</a>*@
-
-                        <a href="/casedocument/CaseDocumentGet?caseDocumentId=@item.Id&caseId=@item.CaseId" target="_blank" title="@Translation.GetCoreTextTranslation("Skriv ut") @item.Name" class="btn print-case"><i class="icon-file"></i> @Translation.GetCoreTextTranslation("Skriv ut")</a>
+                        <a href="/casedocument/CaseDocumentGet?caseDocumentGUID=@item.CaseDocumentGUID&caseId=@item.CaseId" target="_blank" title="@Translation.GetCoreTextTranslation("Skriv ut") @item.Name" class="btn print-case"><i class="icon-file"></i> @Translation.GetCoreTextTranslation("Skriv ut")</a>
                     </td>
                     <td></td>
                 </tr>
