[FIX] CaseDocument - Remove style

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_CaseDocumentPrint.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_CaseDocumentPrint.cshtml
@@ -202,12 +202,13 @@
             opacity: 0.5;
         }
 
-        .footer-au {
+        /*.footer-au {
             font-family: 'Verdana';
             font-weight: normal;
             font-style: normal;
             text-align: center !important;
-        }
+            background-color:aqua;
+        }*/
     </style>
 </head>
 <body>
