--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -112,24 +112,6 @@
                                         <input type="hidden" name="Casesolution.Status" value="0" />
                                     </td>
                                 </tr>
-                                @*Split selection*@
-                                @*<tr> // TODO: Use a enable button to show (and reset value if saved when disabled) of split to dropdown
-                                    <td>
-                                        @Translation.Get("Enable split", Enums.TranslationSource.TextTranslation)
-                                    </td>
-                                    <td>
-                                        <input type="checkbox" name="Casesolution.EnableSplit" @(Model.CaseSolution.SplitToCaseSolution_Id.HasValue ? "checked=checked" : "") value="" class="switchcheckbox" />
-                                        <input type="hidden" name="Casesolution.EnableSplit" value="0" />
-                                    </td>
-                                </tr>*@
-                                <tr id="splitSelection">
-                                    <td>
-                                        @Translation.Get("Split to case template", Enums.TranslationSource.TextTranslation)
-                                    </td>
-                                    <td>
-                                        @Html.DropDownListFor(model => model.CaseSolution.SplitToCaseSolution_Id, Model.SplitToCaseSolutions.Select(o => new SelectListItem() { Text = o.Name + (o.CaseSolutionCategory == null ? "" : " " + o.CaseSolutionCategory.Name), Value = o.Id.ToString() }).ToList(), "")
-                                    </td>
-                                </tr>
                             </table>
                         </div>
                     </div>
@@ -176,15 +158,23 @@
                                                 <select id="savaAndClose" name="CaseSolution.SaveAndClose" @(Model.CaseSolution.ShowInsideCase == 1 ? "" : "disabled='true'")>
                                                     @foreach (var action in Model.ActionList)
                                                     {
-                                                        <option value="@action.Value" @(action.Selected ? "selected" : "")> @action.Text </option>
-                                                    }
+                                                        <option value="@action.Value" @(action.Selected ? "selected" : "")> @action.Text </option>}
 
                                                     @if (Model.CaseSolution.ShowInsideCase != 1)
                                                     {
-                                                        <option value="-2" selected> @saveDropDownText </option>
-                                                    }
+                                                        <option value="-2" selected> @saveDropDownText </option>}
                                                 </select>
                                             </td>
+                                            @*Split selection*@
+                                            @*// TODO: Use a enable button to show (and reset value if saved when disabled) of split to dropdown*@
+                          
+                                            <td style="width:250px;padding-left:20px;">
+                                                @Translation.Get("Split to case template", Enums.TranslationSource.TextTranslation)
+                                            </td>
+                                            <td>
+                                                @Html.DropDownListFor(model => model.CaseSolution.SplitToCaseSolution_Id, Model.SplitToCaseSolutions.Select(o => new SelectListItem() { Text = o.Name + (o.CaseSolutionCategory == null ? "" : " " + o.CaseSolutionCategory.Name), Value = o.Id.ToString() }).ToList(), "")
+                                            </td>
+                       
                                         </tr>
                                         <tr>
                                             <td>
